DiscoveryListener filters out the self-discovery; made minor tweaks device service.
git-svn-id: https://svn.ece.gatech.edu/repos/gritslab/cps/trunk@621 01617cb1-71e7-4244-8ca6-8ab856e43c5d